[common] reverting fix for form-item spacing as it broke focus border

--- a/app/assets/scss/components/_form.scss
+++ b/app/assets/scss/components/_form.scss
@@ -178,7 +178,6 @@
         margin:0 0 2.5em 0;
         padding: 0;
         clear:both;
-        overflow: hidden;//removes top spacing if first child
     }
 
     .form-declaration {
